0029715: Estimate the grid size of the acceleration structure by the complexity of the face