src/BRepMesh/BRepMesh_Delaun.hxx
@@ -52,6 +52,12 @@ public:
   Standard_EXPORT BRepMesh_Delaun (const Handle(BRepMesh_DataStructureOfDelaun)& theOldMesh,
                                    BRepMesh::Array1OfInteger&                    theVertexIndices);
 
+  //! Creates the triangulation with an existant Mesh data structure.
+  Standard_EXPORT BRepMesh_Delaun (const Handle (BRepMesh_DataStructureOfDelaun)& theOldMesh,
+                                   BRepMesh::Array1OfInteger&                    theVertexIndices,
+                                   Standard_Integer cellsCountU,
+                                   Standard_Integer cellsCountV);
+
   //! Initializes the triangulation with an array of vertices.
   Standard_EXPORT void Init (BRepMesh::Array1OfVertexOfDelaun& theVertices);
 
@@ -144,12 +150,11 @@ private:
   //! that have number of connected elements less or equal 1.
   BRepMesh::HMapOfInteger getEdgesByType (const BRepMesh_DegreeOfFreedom theEdgeType) const;
 
-  //! Create super mesh and run triangulation procedure.
-  void perform (Bnd_Box2d&                 theBndBox,
-                BRepMesh::Array1OfInteger& theVertexIndices);
+  //! Run triangulation procedure.
+  void perform (BRepMesh::Array1OfInteger& theVertexIndices);
 
   //! Build the super mesh.
-  void superMesh (const Bnd_Box2d& theBox);
+  void superMesh (const Bnd_Box2d& theBox, Standard_Integer cellsCountU = -1, Standard_Integer cellsCountV = -1);
 
   //! Computes the triangulation and adds the vertices,
   //! edges and triangles to the Mesh data structure.
